8324949: [lworld] Migrate compiler tests to new internal API