@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,9 +25,17 @@
  * @test
  * @bug 8230397
  * @summary Test removal of an already dead AllocateNode with not-yet removed proj outputs.
- * @compile -XDenablePrimitiveClasses TestDeadAllocationRemoval.java
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xbatch TestDeadAllocationRemoval
+ * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestDeadAllocationRemoval.java
+ * @run main/othervm -XX:+EnableValhalla -Xbatch
+ *                   --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *                   --add-exports java.base/jdk.internal.value=ALL-UNNAMED
+ *                   TestDeadAllocationRemoval
  */
+
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
 
 public class TestDeadAllocationRemoval {
 
@@ -39,7 +47,9 @@ public class TestDeadAllocationRemoval {
     }
 }
 
-primitive class MyValue {
+@ImplicitlyConstructible
+@LooselyConsistentValue
+value class MyValue {
     public static long instanceCount = 0;
     public float fFld = 0;
     public boolean bFld = true;
@@ -55,6 +65,7 @@ class Test {
     public static int iFld=-4;
     public static double dArrFld[]=new double[N];
     public static int iArrFld[]=new int[N];
+    @NullRestricted
     public static MyValue OFld=new MyValue();
 
     public static long vMeth_check_sum = 0;
